# b3-simple-asset-monitor

./: .env.ini  .gitignore  README.md  manage.py  pyproject.toml
interface/: form.py  models.py  urls.py  views.py
interface/templates/: base.html
interface/templates/interface/: register.html  update.html  view_list.html
interface/templates/registration/: login.html
monitoring/: api.py  apps.py  mails.py  models.py  scheduler.py  urls.py  views.py
monitoring/migrations/: 0001_initial.py
simple_asset_monitor/: asgi.py  settings.py  urls.py  wsgi.py
