[tool.poetry]
name = "b3-simple-asset-monitor"
version = "0.1.0"
description = ""
authors = ["Rafael Correa Nagy <rafaelcnagy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
parsel = "^1.6.0"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"
celery = "^5.2.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
